homepage name changed
changed home page name

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -17,7 +17,7 @@ function closeNav() {
 <body>
 <div >
 <div class="header">
-<a >
+<a href="WeGotItCovered.html">
 <img style="height:50px;width:194px;" src="Logo.png" />
 </a>
 <div class="top-left"><span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span></div>
@@ -25,7 +25,7 @@ function closeNav() {
 </div>
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="Home.html">Home</a>
+  <a href="Wegotitcovered.html">Home</a>
   <a href="Characters.html">Characters</a>
   <a href="Deaths.html">Deaths In Infinity War</a>
 </div>
