--- a/Deaths.html
+++ b/Deaths.html
@@ -19,7 +19,7 @@ function closeNav() {
 <body>
 <div >
 <div class="header">
-<a href="Home.html">
+<a href="Wegotitcovered.html">
 <img style="height:50px;width:194px;" src="Logo.png" />
 </a>
 <div class="top-left"><span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span></div>
@@ -27,7 +27,7 @@ function closeNav() {
 </div>
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="Home.html">Home</a>
+  <a href="Wegotitcovered.html">Home</a>
   <a href="Characters.html">Characters</a> 
   <a href="AboutUs.html">About Us</a>
 </div>
@@ -140,7 +140,7 @@ Strange: There was no other way Tony.
 
 
 
-<p>Remember Tony stark in Spiderman homecoming:"What if somebody had died tonight, different stoy right? Because that’s on you. I feel like that’s on me".<br>
+<p>Remember Tony stark in Spiderman Wegotitcoveredcoming:"What if somebody had died tonight, different stoy right? Because that’s on you. I feel like that’s on me".<br>
 After snap Spiderman senses something bad coming his way, because of his spider-sense, he takes the most time to die, breaking his mentor Tony stark’s heart.<br> It’d be interesting to see how tony could confront aunt may and how he would come out guilt after death of peter.<br>
 </p>
 
