--- a/Wegotitcovered.html
+++ b/Wegotitcovered.html
@@ -18,11 +18,11 @@ function closeNav() {
 <div class="bg">
 <div class="header">
 
-<a href="Home.html">
+<a href="WeGotItCovered.html">
 <img style="height:100%;width:15%;" src="Logo.png" />
 </a>
 <div class="top-left"><span onclick="openNav()">&#9776; Menu</span></div>
-<div class="top-center"><h1>WeGotItCovered!!!!!!</h1></div>
+<div class="top-center"><h1>WeGotItCovered!</h1></div>
 </div>
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
